Adding styles to the Dictionary.jsx file

--- a/src/Dictionary/Dictionary.css
+++ b/src/Dictionary/Dictionary.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -61,4 +61,4 @@ button{
     text-align: start;
     background: #016701;
     text-align: start;
-  } */
+  }
